# stm32_test

./: blink.ld  compile.sh  main.c  meson-cross.txt  meson.build  startup.c
stm04/: .cproject  .mxproject  .project  stm04 Debug (1).launch  stm04 Debug.launch  stm04.ioc
stm04/Core/Src/: main.c
stm04/Debug/: stm04.elf  stm04.list  stm04.map
stm04/Debug/Core/Src/: main.cyclo  main.su
stm04/Release/: makefile
stm04/Release/Core/Startup/: subdir.mk
stm04/Release/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
